<resources>
    <string name="app_name">MyFoodPie</string>
    <string name="radio_foodwiki">食物百科</string>
    <string name="radio_roameat">逛吃</string>
    <string name="radio_myself">我的</string>
    <string name="tab_roameat_drop">.</string>
    <string name="foodwiki_query">查询食物信息</string>
    <string name="foodwiki_search">请输入食物名称</string>
    <string name="foodwiki_analyis">饮食分析</string>
    <string name="foodwiki_compare">搜索对比</string>
    <string name="foodwiki_scan">扫码对比</string>
    <string name="fragmengt_myself">我的</string>
    <string name="my_login">点击登陆</string>
    <string name="web_back">咨询详情</string>
    <string name="web_home_back">我赌我会瘦</string>
    <string name="web_share">分享</string>
    <string name="web_keep">收藏</string>
    <string name="sort">食物分类</string>
    <string name="brand">热门品牌</string>
    <string name="chain">连锁餐饮</string>
    <string name="roameathome">图片详情</string>
    <string name="collect_tv_login_back">我的收藏</string>
    <string name="order_tv_login_back">我的订单</string>
    <string name="photo_tv_login_back">我的照片</string>
    <string name="upload_tv_login_back">上传食物</string>
    <string name="my_food">我上传的食物</string>
    <string name="delete">草稿箱</string>
    <string name="upload_btn">上传食物</string>
    <string name="tv_foodwikibrand_text">营养素排序</string>
    <string name="login_tv_login_back">登录</string>
    <string name="set_tv_login_back">设置</string>
    <string name="no_logon">不用注册,用以下账号直接登录</string>
    <string name="ic_login_qq">QQ</string>
    <string name="ic_login_wechat">微信</string>
    <string name="ic_login_weibo">微博</string>
    <string name="ic_login_boohee">薄荷</string>
    <string name="et_query">请输入食物名称</string>
    <string name="rl_set_delete">清除缓存</string>
    <string name="rl_set_giveme">给我们提个建议</string>
    <string name="rl_set_eva">评个分吧</string>
    <string name="rl_set_foodfriend">将食物派分享给朋友</string>
    <string name="btn_set_nologin">退出登录</string>
    <string name="tv_set_one">食物派 版本号:V2.6</string>
</resources>
