<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_login_back"
        style="@style/set_tv_login_back"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:drawableLeft="@mipmap/ic_back_dark_center"
        android:gravity="center_vertical" />

    <View
        style="@style/roameat_view"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/gray"></View>

    <RelativeLayout
        android:id="@+id/rl_set_delete"
        style="@style/set_rl"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/rl_set_delete" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/list_arrow" />

        <View
            style="@style/roameat_view"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/gray"></View>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_set_giveme"
        style="@style/set_rl"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/rl_set_giveme" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/list_arrow" />

        <View
            style="@style/roameat_view"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/gray"></View>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_set_eva"
        style="@style/set_rl"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/rl_set_eva" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/list_arrow" />

        <View
            style="@style/roameat_view"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/gray"></View>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_set_foodfriend"
        style="@style/set_rl"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/rl_set_foodfriend" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/list_arrow" />

        <View
            style="@style/roameat_view"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/gray"></View>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_set_nologin"
        style="@style/btn_set_nologin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_set_one"
        style="@style/tv_set_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</LinearLayout>